effect sweetness has on quality rating added

--- a/Wine Project/wineproject.ipynb
+++ b/Wine Project/wineproject.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1 Exploring the data:"
+    "# Task 1 Exploring the data:"
    ]
   },
   {
@@ -573,6 +573,15 @@
    "cell_type": "markdown",
    "source": [
     "The above plot shows the effect sweetens has on quality ratings given to the wines sampled. Count graphs were used with a hue based on the sweet or dry categorization made above to clearly show the effect of sweetness on wine quality ratings. The sweetness based on the categorization factors chosen does not seem to have much of an effect on the quality rating given to the wines sampled. There is perhaps a slight skewing towards higher quality white wines being dry but this does not have a strong enough link to say anything conclusive."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Task 2: Determining which subset of variables is the most useful for learning"
    ],
    "metadata": {
     "collapsed": false
